[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "dsbro"
version = "0.1.0"
description = "Your Data Science Bro. One import away."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Muhammad Ibrahim Qasmi" },
]
keywords = ["data-science", "machine-learning", "eda", "kaggle", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.11",
  "twine>=5.1",
]
ml = [
  "catboost>=1.2",
  "lightgbm>=4.0",
  "optuna>=3.6",
  "xgboost>=2.0",
]
plotly = ["plotly>=5.22"]
deep = ["torch>=2.2"]
all = [
  "catboost>=1.2",
  "lightgbm>=4.0",
  "optuna>=3.6",
  "plotly>=5.22",
  "torch>=2.2",
  "xgboost>=2.0",
]

[project.urls]
Homepage = "https://github.com/ibrahimqasmi/dsbro"
Documentation = "https://github.com/ibrahimqasmi/dsbro"
Repository = "https://github.com/ibrahimqasmi/dsbro"
Issues = "https://github.com/ibrahimqasmi/dsbro/issues"

[tool.hatch.build.targets.wheel]
packages = ["dsbro"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
